# JiTou-Unlock-NextVersion

./: CMakeLists.txt  CMakeLists.txt.user.3484a7b
.cmake/: version_exe.rc.in
FluentUI/Qt5/imports/FluentUI/Controls/: FluNavigationView.qml
package/: InstallerScript.iss
src/: App.qml  CMakeLists.txt  CreateBackup.cpp  JiTou-Unlock-NextVersion-master.qrc  JiTou-Unlock-NextVersion-master_en_US.qm  JiTou-Unlock-NextVersion-master_en_US.ts  JiTou-Unlock-NextVersion-master_zh_CN.qm  JiTou-Unlock-NextVersion-master_zh_CN.ts  Version.h  devicemanager.h  main.cpp  main.qml  plistmanager.cpp  utils.cpp  utils.h
src/global/: ItemsFooter.qml  ItemsOriginal.qml
src/helper/: LinkHelper.cpp  LinkHelper.h  LogHelper.cpp  LogHelper.h  SettingsHelper.h  deviceLink.cpp  deviceLink.h
src/page/: T_Apply.qml  T_Help.qml  T_Home.qml  T_Remove.qml  T_Settings.qml
